Fix: Navigation will now be behind modals, Mod: increased padding for thumbnails

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -67,7 +67,7 @@ h1, h5
   background: rgba(0,0,0,0.72);
   
 .nav
-  z-index: 42;
+  z-index: 1;
   margin: center;
   position: fixed;
   text-align: center;
@@ -125,6 +125,18 @@ a.button
     margin: auto;
     width: 500px !important;
 
+.footer
+  padding: 25px;
+  color: rgba(255,255,255,0.72);
+  background: #2A2A2A;
+  .social
+    font-size: 72px;
+    a
+      color: rgba(255,255,255,0.72);
+      &:hover
+        color: rgba(255,255,255,0.12);
+
+
 .slick-center
   transform: scale(1.2);
 
@@ -139,15 +151,4 @@ a.button
   font-weight: bold;
   content: '❰';
 
-
-.footer
-  padding: 25px;
-  color: rgba(255,255,255,0.72);
-  background: #2A2A2A;
-  .social
-    font-size: 72px;
-    a
-      color: rgba(255,255,255,0.72);
-      &:hover
-        color: rgba(255,255,255,0.12);
     
